# backend/src/routes/lesson.route.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { createLesson, getAllLessons, getLesson, updateLesson, deleteLesson, getLessonContent } = require('../controllers/lesson.controller');
+const { createLesson, getLesson, updateLesson, deleteLesson, getLessonContent } = require('../controllers/lesson.controller');
 
 const authMiddleware = require('../middlewares/authMiddleware');
 const checkRole = require('../middlewares/roleMiddleware');
@@ -12,8 +12,6 @@ router.post('/', authMiddleware, checkRole(['admin', 'instructor']), upload.sing
 router.put('/:id', authMiddleware, checkRole(['admin', 'instructor']), upload.single('file'), updateLesson);
 router.delete('/:id', authMiddleware, checkRole(['admin', 'instructor']), deleteLesson);
 
-// Получение уроков
-router.get('/', authMiddleware, getAllLessons);
 router.get('/:id', authMiddleware, getLesson);
 
 // Получение контента урока (файл)
